# AIE6

00_AIM_Quicklinks/: README.md
01_Prompt Engineering and Prototyping Best Practices/: answers.md
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb  answers.md
02_Embeddings_and_RAG/aimakerspace/: text_utils.py  vectordatabase.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  answers.md
06_Multi_Agent_with_LangGraph/: answers.md
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  ai_across_years_kg.json  answers.md
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  answers.md
09_Finetuning_Embeddings/: Fine_tuning_Embedding_Models_for_RAG_Notebook.ipynb  answers.md  pyproject.toml  test_dataset.jsonl  training_dataset.jsonl  val_dataset.jsonl
10_Finetuning_Reasoning_Model/: answers.md
12_OpenAI_Agents_SDK/: OpenAI_Agents_SDK.ipynb  report.md
13_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  Breakout_Room_#2.ipynb  pyproject.toml
13_Advanced_Retrieval/data/: testset.jsonl
14_Open_DeepResearch/: open-deep-research.ipynb
15_Open_Source_Endpoints/: Open_Source_RAG_Leveraging_Hugging_Face_Endpoints_through_LangChain.ipynb
16_LLMOps/: Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb
16_LLMOps/deep_research/: .env
(+4 files in other folders)
