[project]
name = "13-advanced-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19",
    "langchain-cohere>=0.4.2",
    "langchain-openai>=0.3.7",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "langchain-qdrant>=0.2.0",
    "pypdf>=5.5.0",
    "ollama>=0.4.8",
    "langchain-ollama>=0.3.3",
    "ragas>=0.2.15",
    "rapidfuzz>=3.13.0",
    "langsmith>=0.3.42",
    "matplotlib>=3.10.3",
]
